<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">
        <TextView
            android:id="@+id/titulo"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/imagenapp"
            android:contentDescription="@string/todo" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/btnJugar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jugar" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/btnRanking"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ranking" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/btnAyuda"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ayuda" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/btnAcercaDe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">
        <TextView
            android:id="@+id/txtConectados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/conectados" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/btnJugadores"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/jugadores_online" />

    </LinearLayout>



</LinearLayout>