<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorDarkGray"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/idNombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/numIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentos"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>


    <TextView
        android:id="@+id/idTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo"
        android:textColor="@android:color/white"
        android:textSize="15sp" />


</LinearLayout>