<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.GanarActivity">


    <TextView
        android:id="@+id/textViewGanador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganador"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/copa" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp">

        <TextView
            android:id="@+id/textViewIntentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intentos"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewIntentos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intentos"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp">

        <TextView
            android:id="@+id/textViewTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewTiempo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonAñadirRanking"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/añadir"
        android:textColor="@android:color/white" />

</LinearLayout>