<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.AyudaActivity">

    <TextView
        android:id="@+id/textViewAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/instrucciones"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/volver"
        android:textColor="@android:color/white" />

</LinearLayout>