<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"

    >


    <TextView
        android:id="@+id/numIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/intentos"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/idNombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"
        android:paddingStart="35dp"
        android:paddingEnd="20dp"
        android:text="@string/nombre"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/idTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/tiempo"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</LinearLayout>