<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DetallesFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="5dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTurnos"
            android:textSize="30sp"
            android:text="@string/turno"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/tvTurnosNum" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:id="@+id/tvBarcosDe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcos_de_2" />
        <TextView
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:id="@+id/tvBarcosDe2num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvBarcosDe3"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcos_de_3" />
        <TextView
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:id="@+id/tvBarcosDe3num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvBarcosDe4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcos_de_4" />
        <TextView
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:id="@+id/tvBarcosDe4num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>